--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
         "vue": "^3.2.36"
     },
     "dependencies": {
+        "epic-spinners": "^2.0.0",
+        "mitt": "^3.0.0",
+        "pico-emitter": "^1.2.1",
+        "tiny-emitter": "^2.1.0",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
         "vuex": "^4.1.0",
